--- a/figuras.html
+++ b/figuras.html
@@ -13,9 +13,9 @@
         </h1> 
         <p>Este es el primer taller del curso práctico de JavaScript</p>
     </header>
-
+<!--Cuadrado-->
     <section>
-        <h2>Calcula el área y perímetro de un cuadrado</h2>
+        <h2>Calcula el área o perímetro de un cuadrado</h2>
         <form>
             <label for="InputCuadrado">
                 Escribe cuánto mide cada lado de tu cuadrado:
@@ -29,6 +29,25 @@
             </button>
         </form>
     </section>
+<!--Cuadrado-->
+<!--Triángulo-->
+    <section>
+        <h2>Calcula el área o perímetro de un Triangulo Isósceles</h2>
+        <form>
+            <label for="InputTriangulo">
+                Escribe cuánto mide cada lado de tu triángulo:
+            </label>
+            <input id="InputTriangulo" type="number" />
+            <button type="button" onclick="calcularPerimetroTriangulo()">
+                Calcular el perímetro
+            </button>
+            <button type="button" onclick="calcularAreaTraingulo()">
+                Calcular el área
+            </button>
+        </form>
+    </section>
+<!--Triángulo-->
     <script src="./figuras.js"></script>
 </body>
 </html>
+<!--Haz todas las figuras-->
